@@ -25,23 +25,40 @@ kotlin {
     jvm {
         // On to make "JavaExec" work, else we got SourceSet with name 'main' not found, see https://youtrack.jetbrains.com/issue/KT-42683
         withJava()
+        @OptIn(ExperimentalKotlinGradlePluginApi::class)
+        mainRun {
+            mainClass = "MainKt"
+            if (Platform.os == Os.MacOs) {
+                listOf(
+                    "-XstartOnFirstThread",
+                    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                    "--enable-native-access=ALL-UNNAMED"
+                )
+            } else {
+                listOf(
+                    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                    "--enable-native-access=ALL-UNNAMED"
+                )
+            }.let { setArgs(it) }
+        }
     }
 
     sourceSets {
 
-        val commonMain by getting {
+        commonMain {
             dependencies {
 				implementation(projects.wgpu4kScenes)
             }
         }
 
-        val jsMain by getting {
+        jsMain {
             resources.setSrcDirs(
                 resources.srcDirs + setOf(
                     commonResourcesFile
                 )
             )
         }
+
     }
     @OptIn(ExperimentalKotlinGradlePluginApi::class)
     compilerOptions {
@@ -63,7 +80,11 @@ tasks.register<JavaExec>("runApp") {
             "--enable-native-access=ALL-UNNAMED"
         )
     }
-    classpath = sourceSets["main"].runtimeClasspath
+
+    println("sourceSets ${sourceSets["main"]::class}")
+    println("sourceSets ${sourceSets.asMap}")
+    println("runtimeClasspath ${sourceSets["main"].runtimeClasspath.asIterable()}")
+    classpath = sourceSets["main"].runtimeClasspath.asIterable() as FileCollection
 }
 
 fun getHeadlessProject() = projects.examples.headless.identityPath.path
